<resources>
    <string name="app_name">ایرانگردی</string>
    <string name="open_draw">open Drawer</string>
    <string name="close_draw">close Drawer</string>
    <string name="slid1title">جاذبه های گردشگری ایران را کشف کنید!</string>
    <string name="slide1des">مانند یک تور لیدی به هرکجای ایران که سفرکنید بهترین جاذبه های گردشگری-هتل ورستوران های مقصد را به شمامعرفی میکنیم!</string>
    <string name="slid2title">آخرهفته های باحال!</string>
    <string name="slide2des">در یک آخر هفته باحال با دوستانتان خود میتونید جاذبه ها گردشگری رو تجربه کنید! </string>
    <string name="slid3title">هتل های لوکس با فول ترین امکانات!</string>
    <string name="slide3des">شما میتونید لوکس ترین هتل های شهر رو با بهترین امکانات انتخاب کنید!  </string>
    <string name="slid4title">graphic</string>
    <string name="slide4des">corel draw,photoshop</string>
    <string name="slid5title">network</string>
    <string name="slide5des">network+,ccna,ccnp</string>
    <string name="next">ورق بزنید</string>
    <string name="skip">تمام</string>
    <string name="GoToIt">بزن بریم</string>
    <string name="tagbostan">طاق بستان که یکی از معروف ترین مکان های توریستی شهر کرمانشاه است.مجموعه ای از سنگ نگاره ها و سنگ نبشه های دوره ساسانی که در شمال غربی شهر کرمانشاه قرار دارد.این مجموعه ارزش هنری و تاریخی زیادی دارد که شامل دو طاق بزرگ و کوچک و چند سنگ نبشته است.آنچه روی سنگ های دو طاق حجاری شده صحنه های تاریخی تاج گذاری خسرو پرویز-تاج گذاری اردشیر دوم و تاج گذاری شاهپور دوم و سوم است.وجود کوه و چشمه در این مکان آن را به گردشگاهی مفرح تبدیل کرده که از زمان های دیرین تا به امروز مورد توجه بوده است.این اثر در 15 دی ماه سال 1310 در فهرست آثار ملی ایران ثبت شده است.طاقبستان قرار بود روزی در فهرست میراث جهانی یونسکو قرار گیرو اما مغازه های کبابی و خانهای اطراف
                "آن مانع این اقدام هستند و مشکلات فراوانی برای این اثرمهم تاریخی ایجاد کرده اند. </string>
    <string name="biston">مجموعه تاریخی بیستون در 30 کیلومتری شمال شرقی کرمانشاه جنوب غربی شهر بیستون و در پای کوهی به همین نام در مسیر همدان به کرمانشاه قرار دارد.قداست کوه بیستون شرایط مطلوب آب و هوایی و قرار گیری بر سر مسیرهای مهمی از جمله جاده ابریشم باعث شد تا پادشاهان و فرمانروایان بسیاری به این منطقه توجه کنند و آثار و یادگارهای بی بدیلی در دل و دامنه این کوه به یادگار مانده است.این محوطه تاریخی -فرهنگی و طبیعی 28 اثر ثبت شده ملی دارد و در حریم آن بیش از 150 اثر تاریخی شناسایی شده است.کتیبه و نقش برجسته داریوش نیز در سال 1385 در فهرست جهانی یونسکو ثبت شده است.این اثر مربوط به دوره هخامنشیان است. </string>
    <string name="tekyh">حسین خان معین الرعایا 114 سال پیش تکیه معاون الملک را در شهر کرمانشاه بنا کرد و بعدها به همت حسن خان معین الملک تکمیل شد.این مجموعه از سه بخش اصلی حسینیه-زینبیه و عباسیه تشکیل شده و کاشیکاری زیبای آن در جهان بی همتا است.رنگ های به کار رفته در کاشی های این بنا طبیعی بوده و زیبایی خاصی به این اثر بخشیده اند.تکیه معاون الملک میزبان عزاداری های مردم کرمانشاه بوده که دارای دو درب بوده است.بانوان هنگام ورود از دری استفاده می کردند که در بخش بالایی زینبیه تعبیه شده بود.این امر باعث میشد بدون برخورد با مردها بتوانند در تکیه رفت آمد کرده و در مراسم عزاداری شرکت کنند.بخش حسینیه و زینبیه نیز برای عزاداری مردان ساخته شده بوده که کاشی کاری ها و تابلوهای بی نظیری دارند.بیشترین تابلو - کاشی ها نیز در بخش زینبیه قرار دارند.همچنین در بخش حسینیه می توان از موزه پوشاک و مردم شناسی دیدن کرد. </string>
    <string name="safar_kermanshah">کرمانشاه شهری سرشار از تاریخ و فرهنگ است که با جاذبه های دیدنی و تاریخی خود همواره مورد توجه گردشگران قرار گرفته است.شاید برایتان جالب باشد بدانید که شهر کرمانشاه جز اولین سکونتگاه های بشری به حساب می آید و در دوره های مختلف تاریخی رونق فراوانی داشته است.برای سفر به کرمانشاه قبل از حرکت بهتر است اطلاعاتی درباره این شهر زیبا کسب کنید تا سفری بی نظیر داشته باشید و از جاهای دیدنی کرمانشاه غافل نشوید. </string>
    <string name="moarfi_kermanshah">استان کرمانشاه تاریخی پرفراز و نشیب دارد و دارای آثار بجا مانده از دوره های مختلف تاریخی است.از هزاران سال قبل در این منطقه سکونت بشری دیده شده و امروزه هنوز آثاری از آن دوران دور به جا مانده است.کرمانشاه در دوره پادشاهان ساسانی رونق و اعتبار بسیار خاصی داشته و آثار تاریخی زیادی از این دوره به یادگار مانده است البته کرمانشاه علاوه بر جاذبه های تاریخی دارای تنوع اقلیمی - طبیعت بکر و زیبایی است.بازدید از این شهر زیبای تاریخی به همه گردشگران توصیه می شود زیرا مطمئنا سفری متفاوت را در این خطه تجربه خواهد کرد.کرمانشاه به عنوان نهمین شهر پر جمعیت و کلانشهر ایران در منطقه غربی و کرد نشین واقع شده است.طبیعت زیبای استان کرمانشاه به ویژه جنگلهای بلوط زاگرس یکی از بهترین مکان ها برای طبیعت گردی و گردش به شمار می رود. </string>
    <string name="ab_havi_kermanshah">کرمانشاه شهری با آب و هوای کوهستانی است و فصل تابستان یکی از بهترین گزینه های سفر محسوب می شود.بهتر است از اوایل خرداد تا اوایل شهریور اقدام به سفر کنید.حال اگر خواستید در زمستان به سمت کرمانشاه سفر کنید باید توجه داشته باشید که این شهر دارای زمستان های بسیار سختی است.بدین جهت بهتر است لوازم مناسب یک سفر را به همراه داشته باشید.متوسط دمای کرمانشاه در تابستان از 24 تا 35 درجه سانتی گراد متغیر است.میزان متوسط حداقل دمای کرمانشاه نیز تقریبا بین 10 تا 7 درجه سانتی گراد است.شلوغ ترین زمان از لحاظ آب و هوایی اواخر بهار و تابستان است.در این زمان کرمانشاه هوایی بی نظیر دارد و در مقابل هزینه های سفر نیز در این ماه ها افزایش می یابد.اما خلوت ترین و ارزان ترین فصل سفر به کرمانشاه زمستان است زیرا هوا سرد و برفی شده تا حدی که یخبندان های سبک و سنگسن ایجاد می شود.</string>
    <string name="jashn_kermanshah">در شهر کرمانشاه نیز همانند سایر شهرها می توانید از چندین نوع جشنواره بازدید کنید.اگر قصد سفر به این دیار را دارید بهتر است تاریخ سفر خود را طوری تنظیم کنید تا به این جشنواره ها برسید.جشنواره های کرمانشاه عبارتند از : جشنواره نوروزی که آیین برگزاری نوروز را به صورت ملی و بین المللی در ایام نوروز به نمایش می گذارند.جشنواره دیگر مربوط به چله تابستان بوده که در وسط تابستان برگزار می شود و به عنوان جشنواره ای ملی محسوب می شود.جشنواره میوه های بهشتی برای آیین شکرانه میوه هایی مانند انجیر - انار - انگور - و گردو به صورت ملی در اواخر تابستان و اوابل پاییز برگزار می شود.مراسم عید قربان نیز با گردهمایی ها و توزیع نزورات انجام می گیرد.نمایش تعزیه و مراسم اربعین نیز با گردهمایی های هیئت هتی عزاداری و آیین ها تعزیه برای عزاداری و سوگواری به صورت ملی برگزار می شود.یکی دیگر از جشنواره های جالب در کرمانشاه جشنواره صخره نوردی است که در بیستون اجرا می شود.این جشنواره بین المللی در فصل پاییز برگزار می شود.جشنواره اسب یکی دیگر از جشنواره های خاص در کرمانشاه است که به نمایش - مسابقه و حراج اسب می پردازد.  </string>
    <string name="soghati_kermanshah">کرمانشاه جزو شهرهایی است که سوغاتی های محبوب زیادی دارد و تهیه این سوغاتی ها به هکه گردشگران توصیه می شود.مانند : روغن کرمانشاهی : این روغن از محبوبرین محصولات دامی کرمانشاه است.این روغن از شیر و ماست دام های این خطه به دست می آید.کره گرفته شده از شیر را در ظروف مخصوص به قدری می زنند تا چربی از شیر و آب جدا شود.این چربی ها را حرارت داده و روغن خالص کمانشاهی را به عنوان یکی از طبیعی ترین روغن ها تهیه می کنند.این روغن به عنوان سوغای اصلی کرمانشاه محسوب می شود.شیرینی کاک : نوعی شیرینی با طعم بسیار خوشمزه در شهر کرمانشاه شهرت داردکه جزو سوغاتی های کرمانشاه محسوب می شود.این شیرینی در میان گردشگران داخلی و خارجی محبوبیت خاصی دارد و از لایه های خمیری هل دار و گلاب دار شده به مقدار زیاد و نازک بر روی هم تهیه می شوند و بر روی آن پودر نارگیل بادام و پسته و یا خاک قند می ریزند.نان خرمایی : یکی از بهترین و خوشمزه ترین سوغات های کرمانشاه نان خرمایی است که در اصطلان کرمانشاهیان نان خانقی می گو یند.نان برنجی : کرمانشاه سوغات معروفی به نام نان برنجی دارد که دارای عمر 150 ساله است.نان برنجی به دو صورت ساده و زعفرانی با بافت بسیار نرم تهیع می شود.گلیم - قالی - جاجیم : از دیگر سوغات کرمانشاه می توان به گلیم - قالی - جاجیم - اشاره کرد که در شهر کرمانشاه بهترین و معروف ترین طرح ها ارائه می شود.این سه محصول در همه خانه های مردم کرمانشاه به عنوان صنایع دستی وجود دارند.موج بافی : یکی از بهترین سوغاتی های شهر کرمانشاه موج بافی است که بسیار زیبا بوده و به عنوان وسیله کاربردی مورد استفاده قرار می گیرد.موج بافی به نوعی بافت پارچه گغته گغته می شود که به عنوان رخت خواب و رو انداز استفاده می شود.طرح این پارچه ها به صورت چهارخانه یا کشکولی هستند.چپغ بافی : یکی از سوغات های معروف و زیبای استان کرمانشاه چپغ بافی است که بهترین نوعشان را از عشایر می توانید تهیه کنید.چپغ در واقع نوعی حصیر طرحدار است که در طرح های مختلف با پشم بافته می شود.گیوه کرمانشاه : گیوه وسیله ای به عنوان کفش روزانه است و یکی از بهترین سوغاتی های شهر کرمانشاه به شمار می رود.این کفش ها بسیار مقاوم و سنتی و در استان های دیگر تهیه می شوند.در واقع گیوه بافی از هنرهای سنتی ایرانیان محسوب می شود و پیشنهاد خوبی برای فصل های خنک است. کرمانشاهی ها 5 نو گیوه دارند که عبارتند از : گیوه تخت لاستیک - گیوه تخت آجیده - گیوه ابریشمی - زیر پارچه ای و تخت چرمی.چرم سازی : کرمانشاه با توجه به شرایط اقلیمی خود و شغل دامداری در چرم سازی مشهور است و از زمان های گذشته کرمانشاهی ها یکی از سازندگان چرم در ایران شناخته می شوند.چرم های با کیفیت مانند انواع زین و یراق - کیف و کفش و چندین محصول چرمی دیگر در این شهر تهیه می شوند</string>
    <string name="safar_mazandaran">رشت مرکز استان گیلان پرجمعیت ترین شهر گیلک نشین در جهان و شهر باران است.معمولا شهر رشت را به عنوان شهری پیشتاز در فرهنگ و هنر تغییرات اجتماعی و جریان های روشنفکری می شناسند.در این یاداشت از بهترین زمان برای سفر _ سوغات ها و آداب و روسوم حرف میزنیم.... </string>
    <string name="safar_tabriz">شهر تبریز دارای قدمتی بیش از 3500 سال است که به عنوان بزرگترین شهر شمال غرب کشور و سومین شهر بزرگ ایران بعد از تهران و مشهد شناخته شده است.تبریز یکی از مهمترین شهر های استان آذری نشین ایران و از قطب های مهم صنعتی - تجاری و گردشگری است.از نظر موقعیت جغرافیایی تبریز در غرب استان آذربایجان شرقی وافع شده و از سمت شمال به کوه های پکه چین و عون بن علی _ از سمت شمال شرق به کوه های گوزنی و بابا باغی _ از سمت شرق به گردنه پایان و از سمت جنوب به دامنه های رشته کوه سهند محدود می شود... </string>
    <string name="safar_gheshm">جزیره قشم بزرگترین جزیره ایران و از شناخته شده ترین جزیره های کشورمان است که در استان هرمزکان واقع شده است.این جزیره طبیعتی بکر زیبا دارد و تاریخ آن به درازای دوران ساسانیان است.مدت زیادی است که این جزیره ی جنوبی به مقصد گردشگری بسیاری از ایرانی ها و توریست های خارجی تبدیل شده است.اگر قصد دارید به قشم سفر کنید بهتر از قبل از رفتن اطلاعاتی درباره این شهر توریستی کسب کنید...</string>
    <string name="safar_yazd">معماری ارزشمند و سنتی یزد در طول سالیان دراز گردشگران داخلی و خارجی بی شماری را از سراسر ایران و دنیا به خود جذب کرده است.در کنار معماری عجیب و شگفت انگیز یزد البته که موارد بسیار دیگری از جمله جاذبه های تاریخی _ آیین ها و مراسمات باشکوه _ غذاهای محلی _ آب هوا _ خونگرمی مردمان یزد و... در جذب گردشگر تاثیرگذار است.بادگیرها و قنات هایش هستند و آن را اولین شهر خشت خام دنیا می نامند.بنابراین نقش معماری بناهای یزد در این زمینه چر رنگ تر است... </string>
    <string name="safar_sheraz">شیراز شهری پرآوازه در کشورمان است که بات زیبایی های بی نظیر خود نه تنها در ایران بلکه در سراسر جهان زبانزد همگان شده است.در شهر شیراز دیدنی هایی وجود دارد که از جاذبه های گردشگری و تاریخی گرفته تا جاذبه های طبیعی و باغ های ایرانی و هر کدامشان با زیبایی های منحصر به فرد خود در میان گردشگران داخلی و خارجی دارای محبوبیت خاصی است.در کل شیراز از آن جمله شهرهایی است که حال و هوای بسیار خوشی در این شهر جریان دارد و سفری پر از آرامش و دلچسب در انتظار شماست...</string>
    <string name="safar_esfehan">اصفهان شهری با اصالت و سرشار از هنر و فرهنگ ایرانی و از گردشگرپذیرترین شهرهای ایران در مقیاس ملی یا حتی جهانی است.اصفهان که به نصف جهان هم مشهور شده است این جایگاه را مدیون شاهکارهای معماری خود است که در سطح جهانی و بین المللی شناخته شده اند.اگر اینها را در کنار طییعت  زیبا _ زاینده رود دوست داشتنی _ صنایع دستی متنوع و مردم شوخ و طنزپرداز این شهر بگذاریم.در می یابیم که چرا اصفهان این اندازه شهری محبوب برای گردشگری است....</string>
</resources>